--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -23,8 +23,8 @@
   padding-bottom: $space-16;
 
   @include mobile-only {
-    min-height: 34rem;
-    padding-top: 5.5rem;
+    min-height: 26.6rem;
+    padding-top: 2.05rem;
     padding-bottom: 0;
     align-items: stretch;
   }
@@ -92,9 +92,8 @@
     flex-direction: column;
     flex: 1;
     width: 100%;
-    min-height: calc(34rem - 5.5rem);
     justify-content: space-between;
-    padding: 20px;
+    padding: 1rem;
   }
 }
 
@@ -130,9 +129,9 @@
   @include mobile-only {
     display: flex;
     align-items: flex-start;
-    gap: 0.75rem;
-    margin-bottom: -2.25rem;
-    padding: $space-5;
+    gap: 0.625rem;
+    margin-bottom: -1.75rem;
+    padding: $space-4;
     background-color: #f5f1e9;
     border: 1px solid #ece2cf;
     border-radius: $radius-xl;
